# etcd_fdw

./: .gitignore  Cargo.toml  README.md  etcd_fdw.control  pg_etcd_fdw_rs.control
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build_test.yaml
pg_regress/expected/: setup.out
pg_regress/sql/: setup.sql
src/: lib.rs
