[package]
name = "etcd_fdw"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_etcd_fdw"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg17"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13", "supabase-wrappers/pg13"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14", "supabase-wrappers/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15", "supabase-wrappers/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16", "supabase-wrappers/pg16"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17", "supabase-wrappers/pg17"]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18", "supabase-wrappers/pg18"]
pg_test = []

[dependencies]
etcd-client = { version = "0.16", features = ["tls"] }
futures = "0.3.31"
pgrx = {version="=0.16.1"}
supabase-wrappers = { git="https://github.com/supabase/wrappers.git", branch="main", default-features = false }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
testcontainers = { version = "0.25.0", features = ["blocking"] }
serde = { version = "1.0.226", features = ["derive"] }

[dev-dependencies]
pgrx-tests = "=0.16.1"
testcontainers = { version = "0.25.0", features = ["blocking"] }
serde = { version = "1.0.226", features = ["derive"] }

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
